Bug 411780: update SQLite to 3.5.4.1 to get stability fixes and OS/2 updates, p=sdwilsh, a=mtschrep